generate api client and unit atom, unit.atoms.ts
