# src/api-gen/models/unitController/ApiUnitUnitIdDelete.ts
@@ -1,13 +1,9 @@
-import type { ResTfulResultUnitDto } from "../ResTfulResultUnitDto"
+export type ApiUnitUnitIdDeleteMutationResponse = any | null
 
 export type ApiUnitUnitIdDeletePathParams = {
    /**
+    * @description The ID of the unit to delete.
     * @type integer int64
     */
    id: number
 }
-
-/**
- * @description Success
- */
-export type ApiUnitUnitIdDeleteMutationResponse = ResTfulResultUnitDto
